feat: enhance EBICS upload error handling; improve Docker image mapping and add native image support