@@ -16,7 +16,7 @@ class RunResultTest {
         MeasurementProfile profile = MeasurementProfile.defaults();
         List<Double> latencies = List.of(0.01, 0.02, 0.03);
 
-        RunResult result = new RunResult(
+        RunResult result = RunResult.of(
                 "baseline",
                 "img:jvm",
                 1500L,
@@ -64,7 +64,7 @@ class RunResultTest {
     @Test
     void nullableFields_acceptNull() {
         MeasurementProfile profile = MeasurementProfile.defaults();
-        RunResult result = new RunResult(
+        RunResult result = RunResult.of(
                 "native",
                 "img:native",
                 800L,
@@ -96,16 +96,50 @@ class RunResultTest {
     }
 
     @Test
+    void withGcSummary_fieldsAccessible() {
+        GcSummary gc = GcSummary.fromEvents(
+                List.of(
+                        new GcEvent(0.5, "Young", "G1 Evacuation Pause", 24576, 8192, 262144, 3.45),
+                        new GcEvent(1.2, "Young", "G1 Evacuation Pause", 30720, 10240, 262144, 2.10),
+                        new GcEvent(3.0, "Full", "System.gc()", 200000, 50000, 262144, 120.5)
+                ),
+                5.0,
+                type -> type.toLowerCase().contains("full")
+        );
+        assertNotNull(gc);
+
+        RunResult result = RunResult.of(
+                "gc-test", "img:jvm", 1200L, 0.3,
+                List.of(0.010, 0.015, 0.012),
+                1.5, 66.67,
+                "-Xlog:gc*:stdout",
+                ReadinessCheckUsed.ACTUATOR_READINESS, null,
+                BenchmarkScenario.PAYLOAD_HEAVY_JSON, 200000, "/json?n=200000",
+                MeasurementProfile.defaults(),
+                List.of(), List.of(), List.of(),
+                1, gc, "/tmp/gc.log", null, null
+        );
+
+        assertNotNull(result.gcSummary());
+        assertEquals(3, result.gcSummary().gcCount());
+        assertEquals(1, result.gcSummary().fullGcCount());
+        assertTrue(result.gcSummary().totalPauseMs() > 0);
+        assertTrue(result.gcSummary().maxPauseMs() > 100); // Full GC = 120.5ms
+        assertEquals("/tmp/gc.log", result.gcLogPath());
+        assertEquals(3, result.gcSummary().events().size());
+    }
+
+    @Test
     void recordEquality() {
         MeasurementProfile profile = MeasurementProfile.defaults();
         List<Double> lats = List.of(0.01);
 
-        RunResult a = new RunResult("a", "img:jvm", 100, 0.1, lats, 1.0, 100.0,
+        RunResult a = RunResult.of("a", "img:jvm", 100, 0.1, lats, 1.0, 100.0,
                 "", ReadinessCheckUsed.ACTUATOR_HEALTH, null,
                 BenchmarkScenario.PAYLOAD_HEAVY_JSON, 100, "/json?n=100",
                 profile, List.of(), List.of(), List.of(), 1, null, null, null, null);
 
-        RunResult b = new RunResult("a", "img:jvm", 100, 0.1, lats, 1.0, 100.0,
+        RunResult b = RunResult.of("a", "img:jvm", 100, 0.1, lats, 1.0, 100.0,
                 "", ReadinessCheckUsed.ACTUATOR_HEALTH, null,
                 BenchmarkScenario.PAYLOAD_HEAVY_JSON, 100, "/json?n=100",
                 profile, List.of(), List.of(), List.of(), 1, null, null, null, null);
